@@ -73,6 +73,12 @@ TODO/bugs In SILC Libraries
    does not want to register them one by one (if for example SILC client
    is run without config files at all).
 
+ o The ID List must be optimized.  When the lists grow the searching
+   becomes a lot slower and is some cases the lists are searched many
+   times, like with channel messages (twice at least).  Some sort of
+   hash tables should replace the lists.  Thus, the ID cache should be
+   rewritten to use hash tables internally.
+
  o Compression routines are missing.  The protocol supports packet
    compression thus it must be implemented.  SILC Comp API must be
    defined.  zlib package is already included into the lib dir (in CVS,
